# GeoAI-Aquaculture-Pond-Identification-Challenge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: generate-submission.md  run-eda.md  run-tests.md  train-model.md
notebook/: 01_EDA.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_improved_model.ipynb
src/: evaluate.py  features.py  predict.py  preprocessing.py  train.py
tests/: test_evaluate.py  test_features.py  test_preprocessing.py
