[project]
name = "geoai-aquaculture-pond-identification-challenge-by-fao-and-itu"
version = "0.1.0"
description = "Zindi GeoAI Aquaculture Pond Identification Challenge by FAO and ITU"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "optuna>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
